# iotrace

./: .gitignore  CMakeLists.txt  README.md
src/: fd_table.c  fd_table.h  file_stat.c  file_stat.h  file_statistics.c  file_statistics.h  file_stats.c  file_stats.h  iotrace.c  json-printer.c  json-printer.h  json_printer.c  json_printer.h  main.c  syscall_handler.c  syscall_handler.h  syscall_names.c  syscall_names.h  thread_temporaries.c  thread_temporaries.h  unconsidered_syscall_stat.c  unconsidered_syscall_stat.h  unmatched_syscalls_stats.c
syscall_names/: syscall_64.tbl  syscall_parser.sh
test/: diskio.c  diskio_example.c  dup.c  mpi-hello-world.c
